# hw2p2

./: CMakeLists.txt  common.cu  common.h  gpu.cu  matrix.cu
